packages/pug-lexer/test/errors/inconsistent-indentation.pug
html
  body
      p Hey
    p Is this in <body> or in <p>?
